--- a/appendix/app-results.tex
+++ b/appendix/app-results.tex
@@ -1,56 +1,73 @@
 %!TEX root = ../main/main.tex
 
-\subsection{Proof of Lemma~\ref{lemma:mylemma}}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-\begin{figure}[t]
-	\centering
-	\input{../figures/enumfig.tex}
-	\caption{An example iteration of ${\tt trav}$ and ${\tt move}$. The sequences of nodes joined by dashed lines represent a stack $\mathsf{St}$, where the first one was obtained after calling ${\tt trav}$ over the topmost union node, and the following five are obtained by repeated applications of ${\tt move}(\mathsf{St})$.}
-	\label{fig-enum-stacks}
-\end{figure}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+\subsection{Proof of Proposition 1 ~\ref{prop:myproposition}}
 
 
-\subsection{Proof of Theorem~\ref{theo:mytheorem}}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-\input{../figures/gadgetufig}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-\subsection{Proof of Proposition~\ref{prop:myproposition}}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-\begin{claim}\label{prop:lindelayeps}
-	Fix $k\in\bbN$. Let $\mathcal{C}_k$ be the class of all  duplicate-free and $k$-bounded $D$ that satisfy the $\epsilon$ condition. Then one can solve the problem $\texttt{Enum}[\mathcal{C}_k]$ with output-linear delay and without preprocessing (i.e. constant preprocessing time).
-\end{claim}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-\input{../figures/gadgetpepsfig}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+\begin{proof}
+	We show two inclusions.
+	
+	\medskip\noindent\emph{(1) 	\(\llbracket E_{\max}\rrbracket_{d}
+		\subseteq \textsc{Max}(\llbracket E_{\det}\rrbracket_{d})\)} 
+		
+	If \(E_{\max}\) accepts via a run \(\rho_{\max}\) producing mapping
+	\(\mu\), then \(\mu\) is maximal under \(\preceq_{\mathrm{varInc}}\).
+	
+	Indeed, acceptance in \(E_{\max}\) means that in the final state
+	\((R,W)\in F_{\max}\) we have
+	\(R\cap F_{\det}\neq\emptyset\) (so \(\rho_{\max}\) yields \(\mu\))
+	and \(W\cap F_{\det}=\emptyset\).  The fact
+	\(W\cap F_{\det}=\emptyset\) guarantees that no “witness” run that
+	dominates the reference run ever reached an accepting configuration.
+	But any mapping \(\nu\succ_{\mathrm{varInc}}\mu\) in
+	\(\llbracket E_{\det}\rrbracket_{d}\) would correspond to some such
+	dominating run in the subset–construction, and hence would force
+	\(W\cap F_{\det}\neq\emptyset\).  Contradiction.  Therefore \(\mu\)
+	cannot be strictly extended, i.e.\ it is maximal.
+	
+	\medskip\noindent\emph{(2) 	\( \textsc{Max}(\llbracket E_{\det}\rrbracket_{d}) \subseteq \llbracket E_{\max}\rrbracket_{d}
+		\)}
+		
+	If $\mu$ is maximal in \(\llbracket E_{\det}\rrbracket_{d}\) , $E_{max} $ accepts $\mu$. 	Let \(\rho\) be the unique accepting run of \(E_{\det}\) that
+	produces \(\mu\);
+	denote by
+	\(X_{0}\xrightarrow{(a_{1},S_{1})}X_{1}\dots
+	X_{n}\) the sequence of subset–states visited by~\(\rho\).
+	We simulate \(\rho\) in \(E_{\max}\) and show inductively that after
+	processing the first \(k\) input positions (\(0\le k\le n\))
+	the witness component \(W_{k}\) contains \emph{no} final states:
+	\[
+	W_{k}\cap F_{\det} = \varnothing, 
+	\qquad
+	 X_{k} \in R_{k}.
+	\]
+	
+	\begin{itemize}
+		\item \emph{Base case.}  Initially \((R,W)=(X_{0},\emptyset)\);
+		clearly \(W\cap F_{\det}=\emptyset\).
+		
+		\item \emph{Inductive step.}  Assume the invariant for \(k\).
+		When reading \((a_{k+1},S_{k+1})\) the reference component follows
+		\(\rho\) to \(X_{k+1}\).
+		The update rule adds to \(W\)
+		(a)~successors of the existing witnesses;
+		(b)~any successor of \(X_{k}\) that emits a
+		\emph{strict superset} of \(S_{k+1}\).
+		If any state inserted under~(b) could reach \(F_{\det}\), then the
+		corresponding run would realise a mapping
+		\(\nu\succ_{\mathrm{varInc}}\mu\),
+		contradicting the maximality of \(\mu\).
+		By induction the invariant holds for \(k+1\).
+		
+		.
+	\end{itemize}
+	
+	After the last symbol we have
+	\(R_{n}\cap F_{\det}\neq\varnothing\) (contains \(X_{n}\))
+	and \(W_{n}\cap F_{\det}=\varnothing\), so the final composite state
+	is accepting.  Hence \(E_{\max}\) outputs \(\mu\).
+	
+	\medskip
+	Combining (1) and (2) yields the desired equality
+	\(\llbracket E_{\max}\rrbracket_{d} = \textsc{Max}(
+	\llbracket E_{\det}\rrbracket_{d})\).
+\end{proof}
