--- a/extras/biblio.bib
+++ b/extras/biblio.bib
@@ -1,3 +1,27 @@
+@article{FaginKRT15,
+	author  = {Ronald Fagin and Benny Kimelfeld and Frederick Reiss
+	and Wang{-}Chiew Tan},
+	title   = {Document Spanners: A Formal Approach to Information Extraction},
+	journal = {Journal of the ACM},
+	volume  = {62},
+	number  = {2},
+	pages   = {12:1--12:51},
+	year    = {2015},
+	doi     = {10.1145/2699430}
+}
+
+@article{FlorenzanoRUVV20,
+	author  = {Fernando Florenzano and Cristian Riveros and Mart{\'{i}}n Ugarte
+	and Stijn Vansummeren and Domagoj Vrgo{\v{c}}},
+	title   = {Efficient Enumeration Algorithms for Regular Document Spanners},
+	journal = {ACM Transactions on Database Systems},
+	volume  = {45},
+	number  = {1},
+	pages   = {3:1--3:42},
+	year    = {2020},
+	doi     = {10.1145/3351451}
+}
+
 @article{BucchiGQRV22,
 	author    = {Marco Bucchi and
 	Alejandro Grez and
@@ -10,25 +34,4 @@
 	number    = {9},
 	pages     = {1951--1964},
 	year      = {2022}
-}
-
-@article{DurandG07,
-	author    = {Arnaud Durand and
-	Etienne Grandjean},
-	title     = {First-order queries on structures of bounded degree are computable with constant delay},
-	journal   = {{ACM} Trans. Comput. Log.},
-	volume    = {8},
-	number    = {4},
-	pages     = {21},
-	year      = {2007}
-}
-
-@inproceedings{BaganDG07,
-	author    = {Guillaume Bagan and
-	Arnaud Durand and
-	Etienne Grandjean},
-	title     = {On Acyclic Conjunctive Queries and Constant Delay Enumeration},
-	booktitle = {CSL},
-	pages     = {208--222},
-	year      = {2007}
 }
