--- a/extras/metadata.tex
+++ b/extras/metadata.tex
@@ -2,21 +2,21 @@
 
 \bibliographystyle{plainurl}% the mandatory bibstyle
 
-\title{Constant-delay Enumeration for Lorem Ipsum} 
-\titlerunning{Constant-delay Enumeration for Lorem Ipsum} 
+\title{Output-Linear Enumeration of Variable-Inclusion MAX for Extended Variable Automata} 
+\titlerunning{Output-Linear Enumeration of Variable-Inclusion MAX for Extended Variable Automata} 
 
 
-\author{Martín Muñoz}{Pontificia Universidad Católica de Chile}{mmunos@uc.cl}{}{}
+\author{Valentina Silva}{Pontificia Universidad Católica de Chile}{vsilvb@uc.cl}{}{}
 \author{Cristian Riveros}{Pontificia Universidad Católica de Chile}{cristian.riveros@uc.cl}{}{}
 
-\authorrunning{Martín Muñoz and Cristian Riveros}
-\Copyright{Martín Muñoz and Cristian Riveros}
+\authorrunning{Valentina Silva and Cristian Riveros}
+\Copyright{Valentina Silva and Cristian Riveros}
 
-\ccsdesc[500]{Theory of computation~Database theory}
+\ccsdesc[500]{*}
 %\ccsdesc[100]{General and reference~General literature}
 %\ccsdesc[100]{General and reference}%TODO mandatory: Please choose ACM 2012 classifications from https://dl.acm.org/ccs/ccs_flat.cfm 
 
-\keywords{Streams, query evaluation, enumeration algorithms.}
+\keywords{Complex event recognition,  constant-delay enumeration, skyline selection strategy, maximal mappings.}
 
 %\relatedversion{}
 %\relatedversiondetails{Extended Version}{https://arxiv.org/abs/2010.06037}
